Update 파일 구조화 및 정리, 빌드 코드 수정.md
빌드 코드 수정에 대한 적용 철회 및 파일 구조 구체화

--- a/_DevLog/LeeYunSoek/2025-01-15/파일 구조화 및 정리, 빌드 코드 수정.md
+++ b/_DevLog/LeeYunSoek/2025-01-15/파일 구조화 및 정리, 빌드 코드 수정.md
@@ -11,11 +11,20 @@
 
 ```text
 Source/
-├── Project_F/
+├── YourProject/
 │   ├── Public/
-│   │   ├── *.h
+│   │   ├── FSM/
+│   │   │   ├── *.h  // 헤더 파일
+│   │   ├── State/
+│   │   │   ├── *.h
+│   │   ├── .../
+│   │   │   ├── *.h
 │   ├── Private/
-│   │   ├── *.cpp
+│   │   ├── FSM/
+│   │   │   ├── *.cpp  // 소스 파일
+│   │   ├── State/
+│   │   │   ├── *.cpp
+│   │   ├── .../
 ```
 
 - **`Public` 폴더**
@@ -44,7 +53,7 @@ Source/
 
 - `ProjectName.Build.cs` 파일 수정
     
-    `PublicIncludePathModuleNames`를 이용해서 미리 경로를 지정하여 `include` 시의 경로를 `Public`으로 자동 지정하게끔 한다.
+    `PublicIncludePathModuleNames`를 이용해서 미리 경로를 지정하여 `include` 시의 경로를 `Public`으로 자동 지정도 가능한 방법이다.
     
     ```csharp
     public class Project_F : ModuleRules
