Update 파일 구조화 및 정리, 빌드 코드 수정.md (2)
text 코드 시각화 구조 오류 수정

--- a/_DevLog/LeeYunSoek/2025-01-15/파일 구조화 및 정리, 빌드 코드 수정.md
+++ b/_DevLog/LeeYunSoek/2025-01-15/파일 구조화 및 정리, 빌드 코드 수정.md
@@ -14,17 +14,16 @@ Source/
 ├── YourProject/
 │   ├── Public/
 │   │   ├── FSM/
-│   │   │   ├── *.h  // 헤더 파일
+│   │   │   └── *.h  // 헤더 파일
 │   │   ├── State/
-│   │   │   ├── *.h
-│   │   ├── .../
-│   │   │   ├── *.h
+│   │   │   └── *.h
+│   │   └── .../
 │   ├── Private/
 │   │   ├── FSM/
-│   │   │   ├── *.cpp  // 소스 파일
+│   │   │   └── *.cpp  // 소스 파일
 │   │   ├── State/
-│   │   │   ├── *.cpp
-│   │   ├── .../
+│   │   │   └── *.cpp
+│   │   └── .../
 ```
 
 - **`Public` 폴더**
